# unit-testing-pattern-samples

./: LICENSE  pyproject.toml
samples/: customer.py  product.py  store.py
samples/ch02/: customer.py  store.py
samples/ch03/: caculator.py  delivery.py
samples/ch04/: message_render.py
samples/ch05/: controller.py  database.py  email.py  report.py
samples/ch05/customer/: controller.py  customer.py  email.py  store.py
samples/ch06/listing1/: price_engine.py
samples/ch06/listing2/: order.py  product.py
samples/ch06/listing8_/: auth_v1.py  auth_v2.py  auth_v3.py
tests/: test_unit_testing_pattern_samples.py
tests/ch02/: test_customer.py  test_customer_with_london_style.py
tests/ch03/: conftest.py  test_calculator.py  test_customer.py  test_delivery_time.py
tests/ch04/: conftest.py  test_message_render.py
tests/ch05/: test_controller.py  test_customer.py
tests/ch06/: test_auth_v2.py  test_auth_v3.py  test_order.py  test_price_engine.py
