[tool.poetry]
name = "unit-testing-pattern-samples"
version = "0.1.0"
description = "Unit testing (2020) samples."
authors = ["huangkai <h1770360848@outlook.com>"]
maintainers = ["huangkai <h1770360848@outlook.com>"]
readme = "README.md"
repository = "https://github.com/Huangkai1008/unit-testing-pattern-samples"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2"
coverage = "^6.5.0"
mypy = "^0.991"
pytest-mypy = "^0.10.1"

[tool.poetry.dev-dependencies]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target-version = ['py39']
skip-string-normalization = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = true

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
